# apilgtm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: cd-production.yaml  cd-staging.yaml  ci.yaml  cron-tasks.yaml  reusable-build-test.yaml  reusable-codeql.yaml  reusable-dependency-review.yaml  reusable-pre-commit.yaml  sidecar-pr-target.yaml
docs/: README.md  evaluate_url.md  sanitize_url.md
src/apilgtm/: __init__.py  clean_url.py
src/apilgtm/configs/: constants.py  tlds.py
src/apilgtm/helpers/: __init__.py  evaluate.py  sanitize.py
src/apilgtm/utils/: __init__.py  err.py  tld.py  url.py  ver.py
tests/: test_core.py  test_fqdn.py  test_others.py  test_tls.py
